--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,12 @@ description = "Add your description here"
 requires-python = ">=3.11"
 dependencies = [
     "components>=0.0.1a0",
+    "fastapi>=0.115.7",
+    "flask>=3.1.0",
     "pandas>=2.2.3",
     "plotly>=5.24.1",
+    "pydantic>=2.10.6",
+    "requests>=2.32.3",
     "streamlit>=1.41.1",
+    "uvicorn>=0.34.0",
 ]
